--- a/FindABook/Views/Stroyboard/Base.lproj/Main.storyboard
+++ b/FindABook/Views/Stroyboard/Base.lproj/Main.storyboard
@@ -21,43 +21,43 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="CgI-YC-gsg">
-                                    <size key="itemSize" width="120" height="150"/>
+                                    <size key="itemSize" width="200" height="250"/>
                                     <size key="headerReferenceSize" width="50" height="50"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="bookCell" id="whS-px-1KB" customClass="FBBookCell" customModule="FindABook" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="120" height="170"/>
+                                        <rect key="frame" x="87.5" y="50" width="200" height="250"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="120" height="170"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="250"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pyK-RT-dQa">
-                                                    <rect key="frame" x="4" y="2" width="112" height="166"/>
+                                                    <rect key="frame" x="20" y="20" width="160" height="225"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nhv-4H-6dA">
-                                                            <rect key="frame" x="2" y="2" width="108" height="37"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nhv-4H-6dA">
+                                                            <rect key="frame" x="2" y="5" width="156" height="35"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defult_cover" translatesAutoresizingMaskIntoConstraints="NO" id="EbB-40-G00">
-                                                            <rect key="frame" x="6" y="44" width="100" height="120"/>
+                                                            <rect key="frame" x="5" y="45" width="150" height="170"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="120" id="7Jr-36-n3m"/>
-                                                                <constraint firstAttribute="width" constant="100" id="LQZ-Nl-1ji"/>
+                                                                <constraint firstAttribute="height" constant="170" id="7Jr-36-n3m"/>
+                                                                <constraint firstAttribute="width" constant="150" id="LQZ-Nl-1ji"/>
                                                             </constraints>
                                                         </imageView>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
-                                                        <constraint firstItem="nhv-4H-6dA" firstAttribute="top" secondItem="pyK-RT-dQa" secondAttribute="top" constant="2" id="FEf-My-iaG"/>
+                                                        <constraint firstItem="nhv-4H-6dA" firstAttribute="top" secondItem="pyK-RT-dQa" secondAttribute="top" constant="5" id="FEf-My-iaG"/>
                                                         <constraint firstItem="nhv-4H-6dA" firstAttribute="leading" secondItem="pyK-RT-dQa" secondAttribute="leading" constant="2" id="IfC-jp-fAE"/>
                                                         <constraint firstAttribute="trailing" secondItem="nhv-4H-6dA" secondAttribute="trailing" constant="2" id="QNK-FH-ZpZ"/>
-                                                        <constraint firstItem="EbB-40-G00" firstAttribute="top" secondItem="nhv-4H-6dA" secondAttribute="bottom" constant="5" id="QnG-qE-zT5"/>
-                                                        <constraint firstAttribute="bottom" secondItem="EbB-40-G00" secondAttribute="bottom" constant="2" id="YVI-rd-fHo"/>
+                                                        <constraint firstItem="EbB-40-G00" firstAttribute="top" secondItem="nhv-4H-6dA" secondAttribute="bottom" constant="5" id="WKW-fL-AsA"/>
+                                                        <constraint firstAttribute="bottom" secondItem="EbB-40-G00" secondAttribute="bottom" constant="10" id="YVI-rd-fHo"/>
                                                         <constraint firstItem="EbB-40-G00" firstAttribute="centerX" secondItem="pyK-RT-dQa" secondAttribute="centerX" id="sO2-0v-1gc"/>
                                                     </constraints>
                                                 </view>
@@ -65,12 +65,12 @@
                                         </view>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="pyK-RT-dQa" secondAttribute="trailing" constant="4" id="5HU-qJ-dn6"/>
-                                            <constraint firstItem="pyK-RT-dQa" firstAttribute="leading" secondItem="whS-px-1KB" secondAttribute="leading" constant="4" id="9vD-L0-P8E"/>
-                                            <constraint firstItem="pyK-RT-dQa" firstAttribute="top" secondItem="whS-px-1KB" secondAttribute="top" constant="2" id="GO4-hd-Jus"/>
-                                            <constraint firstAttribute="bottom" secondItem="pyK-RT-dQa" secondAttribute="bottom" constant="2" id="aie-6t-RPm"/>
+                                            <constraint firstAttribute="trailing" secondItem="pyK-RT-dQa" secondAttribute="trailing" constant="20" id="5HU-qJ-dn6"/>
+                                            <constraint firstItem="pyK-RT-dQa" firstAttribute="leading" secondItem="whS-px-1KB" secondAttribute="leading" constant="20" id="9vD-L0-P8E"/>
+                                            <constraint firstItem="pyK-RT-dQa" firstAttribute="top" secondItem="whS-px-1KB" secondAttribute="top" constant="20" id="GO4-hd-Jus"/>
+                                            <constraint firstAttribute="bottom" secondItem="pyK-RT-dQa" secondAttribute="bottom" constant="5" id="aie-6t-RPm"/>
                                         </constraints>
-                                        <size key="customSize" width="120" height="170"/>
+                                        <size key="customSize" width="200" height="250"/>
                                         <connections>
                                             <outlet property="bookCover" destination="EbB-40-G00" id="wSJ-fL-G8P"/>
                                             <outlet property="bookName" destination="nhv-4H-6dA" id="R4X-Hp-DKw"/>
